# HDLBuild

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cliff.toml  project.example.yml  pyproject.toml  renovate.json  renovate.json5
.gitea/scripts/: sync_version_from_poetry.sh
.gitea/workflows/: build-and-deploy-nightly.yml  build-and-deploy-release.yml  release.yml
.github/workflows/: build-and-deploy.yml  build-deb.yml
src/: cli.py  config.py  hdlbuild.py
src/dependencies/: resolver.py
src/hdlbuild/: cli.py
src/hdlbuild/commands/: __init__.py  build.py  clean.py  commands.py  dep.py  gen.py  init.py  test.py
src/hdlbuild/dependencies/: resolver.py
src/hdlbuild/generate/: template_generator.py
src/hdlbuild/models/: dependency.py  project.py  templates.py
src/hdlbuild/templates/: gitignore.template  project.yml.template
src/hdlbuild/tools/xilinx_ise/: bitgen.py  common.py  isim.py  main.py  map.py  ngdbuild.py  par.py  trace.py  xst.py
src/hdlbuild/utils/: console_utils.py  directory_manager.py  project_loader.py  source_resolver.py
src/models/: config.py  dependency.py  project.py
src/tools/xilinx_ise/: bitgen.py  common.py  main.py  map.py  ngdbuild.py  par.py  trace.py  xst.py
src/utils/: console_utils.py  directory_manager.py  project_loader.py  source_resolver.py
