[tool.poetry]
name = "hdlbuild"
version = "0.7.0"
description = "Flexible FPGA Build System"
authors = ["0xMax42 <Mail@0xMax42.io>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "hdlbuild", from = "src" }]
include = ["src/hdlbuild/templates/*"]

[tool.poetry.scripts]
hdlbuild = "hdlbuild.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.2"
pydantic = "^2.11.3"
rich = "^14.0.0"
gitpython = "^3.1.44"
typer = "^0.21.0"
jinja2 = "^3.1.6"

[tool.poetry.group.dev.dependencies]
twine = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
